fix block orientation control to be more intuitive

--- a/Notes/TODO
+++ b/Notes/TODO
@@ -21,7 +21,7 @@ TODO NEXT:
 	X fix block removal async thread bug (fixed for now)
 	X fix LightBlock transparency
 	X bugfix more then one block attempting to enter the same space
-	- fix ghost block orientation control to be more intuitive
+	X fix ghost block orientation control to be more intuitive
 	- fix 'playerCameraComponent' not found BUG in PlayerLookScript.Start()
 
 
@@ -97,7 +97,7 @@ CLEANUP/FIXES:
 	X fix block removal async thread bug (fixed for now)
 	X fix LightBlock transparency
 	X bugfix more then one block attempting to enter the same space
-	- fix ghost block orientation control to be more intuitive
+	X fix ghost block orientation control to be more intuitive
 	- bugfix 'playerCameraComponent' not found in PlayerLookScript.Start()
 
 
