--- a/Notes/TODO
+++ b/Notes/TODO
@@ -25,7 +25,7 @@ TODO NEXT:
 	X better skybox
 	X tune lighting
 	X music
-	- block sfx
+	X block sfx
 	- footsteps sfx
 	- player sprint mode
 
@@ -122,7 +122,7 @@ POLISH
 	X better skybox
 	X tune lighting
 	X music
-	- block sfx
+	X block sfx
 	- footsteps sfx
 
 DEFER:
