--- a/Notes/TODO
+++ b/Notes/TODO
@@ -26,7 +26,8 @@ TODO NEXT:
 	X tune lighting
 	X music
 	X block sfx
-	- footsteps sfx
+	X footsteps sfx
+	X remove player velocity from game-info UI
 	- player sprint mode
 
 
@@ -103,6 +104,7 @@ CLEANUP/FIXES:
 	X fix LightBlock transparency
 	X bugfix more then one block attempting to enter the same space
 	X fix ghost block orientation control to be more intuitive
+	X remove player velocity from game-info UI
 	- bugfix 'playerCameraComponent' not found in PlayerLookScript.Start()
 
 
@@ -123,7 +125,7 @@ POLISH
 	X tune lighting
 	X music
 	X block sfx
-	- footsteps sfx
+	X footsteps sfx
 
 DEFER:
 
